<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              android:paddingBottom="@dimen/spacing_smaller"
              android:paddingLeft="@dimen/spacing_normal"
              android:paddingRight="@dimen/spacing_normal"
              android:paddingTop="@dimen/spacing_smaller"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center|left"
        android:text="@string/gifts_filter_dialog_title"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/font_normal"
        android:textStyle="normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center|left"
            android:hint="@string/gifts_filter_dialog_edit_text_hint_title_or_description_text"
            android:inputType="text"
            android:textColorHint="@android:color/tertiary_text_dark"
            android:textSize="@dimen/font_normal"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_min_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:hint="@string/gifts_filter_dialog_min_price"
                android:inputType="numberDecimal"
                android:textColorHint="@android:color/tertiary_text_dark"
                android:textSize="@dimen/font_normal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_max_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:hint="@string/gifts_filter_dialog_max_price"
                android:inputType="numberDecimal"
                android:textColorHint="@android:color/tertiary_text_dark"
                android:textSize="@dimen/font_normal"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OK"/>

</LinearLayout>